Update Bonita and Migration Tool versions (#2039)
* Update Bonita and Migration Tool versions
* Remove reference to MaxPermSize

Co-authored-by: Emmanuel Duchastenier <emmanuel.duchastenier@bonitasoft.com>